// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Avatar Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar\\"
  style=\\"
    background-image: url(https://pbs.twimg.com/profile_images/1217874327137185794/rFqSV_h0_400x400.jpg);
  \\"
></span>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" src=\\"https://pbs.twimg.com/profile_images/1217874327137185794/rFqSV_h0_400x400.jpg\\" />
</div>",
  "title": "basic usage",
}
`;

exports[`Site: Avatar Custom colors 1`] = `
Object {
  "docs": "Avatars accept colors, like in the example below...",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar\\"
    color=\\"black\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
      >NF</span
    ></span
  ><span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar\\"
    color=\\"cyan\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
      >NF</span
    ></span
  >
</div>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" color=\\"black\\" />
  <Avatar title=\\"Netto Farah\\" color=\\"cyan\\" />
</div>",
  "title": "Custom colors",
}
`;

exports[`Site: Avatar Custom variants 1`] = `
Object {
  "docs": "Avatars accept multiple variants, like in the example below...",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
      >NF</span
    ></span
  ><span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-subtle\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
      >ZR</span
    ></span
  >
</div>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" variant=\\"normal\\" />
  <Avatar title=\\"Zeno Rocha\\" variant=\\"subtle\\" />
</div>",
  "title": "Custom variants",
}
`;

exports[`Site: Avatar border: large 1`] = `
Object {
  "docs": "",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar drac-avatar-lg-stroke\\"
  ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
    >NF</span
  ></span
>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" borderVariant=\\"large\\" />
</div>",
  "title": "border: large",
}
`;

exports[`Site: Avatar border: none 1`] = `
Object {
  "docs": "",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar drac-avatar-no-border\\"
  ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
    >NF</span
  ></span
>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" borderVariant=\\"none\\" />
</div>",
  "title": "border: none",
}
`;

exports[`Site: Avatar border: normal 1`] = `
Object {
  "docs": "",
  "html": "<span class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar\\"
  ><span color=\\"white\\" class=\\"drac-text drac-text drac-text drac-text-white\\"
    >NF</span
  ></span
>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" borderVariant=\\"normal\\" />
</div>",
  "title": "border: normal",
}
`;
